--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "llamacpp-cli",
+  "name": "@appkit/llamacpp-cli",
   "version": "1.0.0",
   "description": "CLI tool to manage local llama.cpp servers on macOS",
   "main": "dist/cli.js",
@@ -11,17 +11,34 @@
     "build": "tsc",
     "start": "node dist/cli.js",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "release": "commit-and-tag-version",
+    "release:minor": "commit-and-tag-version --release-as minor",
+    "release:major": "commit-and-tag-version --release-as major",
+    "release:patch": "commit-and-tag-version --release-as patch",
+    "release:first": "commit-and-tag-version --first-release",
+    "postrelease": "git push --follow-tags origin main && npm publish --access public"
   },
   "keywords": [
     "llama",
     "llama.cpp",
     "llm",
     "cli",
-    "server-management"
+    "server-management",
+    "gguf",
+    "macos",
+    "launchctl"
   ],
-  "author": "Dave Weaver",
+  "author": "Appkit Studio",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/appkitstudio/llamacpp-cli.git"
+  },
+  "homepage": "https://github.com/appkitstudio/llamacpp-cli#readme",
+  "bugs": {
+    "url": "https://github.com/appkitstudio/llamacpp-cli/issues"
+  },
   "dependencies": {
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.5",
@@ -29,6 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "commit-and-tag-version": "^12.6.1",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
