--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "url": "https://github.com/appkitstudio/llamacpp-cli/issues"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
     "commander": "^13.0.0"
   },
   "devDependencies": {
+    "@types/blessed": "^0.1.27",
     "@types/node": "^20.12.7",
     "commit-and-tag-version": "^12.6.1",
     "tsx": "^4.7.2",
