fix: include web UI dist files in npm package
- Add 'files' field to package.json to whitelist dist/, bin/, web/dist/
- Update prepublishOnly script to build both CLI and web UI
- Create .npmignore to exclude source files
- Remove 'dist' from web/.gitignore to allow npm packaging
- Add NPM Publishing section to CLAUDE.md documentation

BREAKING: Fixes issue where web UI was missing from npm installs

--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "bin": {
     "llamacpp": "./bin/llamacpp"
   },
+  "files": [
+    "dist/",
+    "bin/",
+    "web/dist/",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "dev": "tsx src/cli.ts",
     "build": "tsc",
     "start": "node dist/cli.js",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build && cd web && npm install && npm run build && cd ..",
     "release": "commit-and-tag-version",
     "release:minor": "commit-and-tag-version --release-as minor",
     "release:major": "commit-and-tag-version --release-as major",
