chore: add package verification automation
- Add scripts/verify-package.js to check package contents
- Run verification automatically in prepublishOnly
- Prevents publishing without web UI files
- Validates package size, file count, and required files
- Update CLAUDE.md with automation documentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "tsc",
     "start": "node dist/cli.js",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build && cd web && npm install && npm run build && cd ..",
+    "verify-package": "node scripts/verify-package.js",
+    "prepublishOnly": "npm run build && cd web && npm install && npm run build && cd .. && npm run verify-package",
     "release": "commit-and-tag-version",
     "release:minor": "commit-and-tag-version --release-as minor",
     "release:major": "commit-and-tag-version --release-as major",
